--- a/lab1.html
+++ b/lab1.html
@@ -5,7 +5,8 @@
 	<title>LAB LAB LAB 1</title>
 </head>
 <body>
-	Масштаб: <input id=scale type=range min=1 max=5 step=1 value=1><br>
+	Масштаб: <input id=scale type=range min=1 max=5 step=1 value=3><br>
+	Анимация: <input type="checkbox" id="anim"><br>
 	<canvas id="canvas" width=1000 height=500></canvas>
 	<script type="text/javascript" src="lab1.js"></script>
 </body>
